Call `RectManager.removeScheduledCallback` on `RootNodeOwner.dispose` (#2888)